--- a/src/views/templates/navbar.ejs
+++ b/src/views/templates/navbar.ejs
@@ -38,11 +38,19 @@
             <% } %>
               <!-- sign out a-->
               <% if (user) { %>
-                <a class="nav-link" href="/api/user-update/<%= user.id %>/confirm">
-                  <!-- Add a placeholder image for the avatar -->
-                  <img src="images/user.png" alt="Placeholder Avatar" class="avatar">
-                  Update Profile
-                </a>
+                <% if (user.avatar) { %>
+                  <!-- Update Profile with user's avatar -->
+                  <a class="nav-link" href="/api/user-update/<%= user.id %>/confirm">
+                    <img src="<%= user.avatar %>" alt="User Avatar" class="avatar">
+                    Update Profile
+                  </a>
+                <% } else { %>
+                  <!-- If no avatar, use a placeholder -->
+                  <a class="nav-link" href="/api/user-update/<%= user.id %>/confirm">
+                    <img src="images/user.png" alt="Placeholder Avatar" class="avatar">
+                    Update Profile
+                  </a>
+                <% } %>
                 <!-- If user is signed in, display the circular avatar -->
                 <a class="nav-link" href="/api/logout">
                   <!-- Add a placeholder image for the avatar -->
